--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@
     line-height: 28px;
 }
 
-.text-base {
+.text-sm {
     font-size: 14px;
     line-height: 26px;
 }
@@ -95,4 +95,79 @@
 
 .max-w-sliderText {
     max-width: 500px;
+}
+
+.max-w-sliderSubTxt {
+    max-width: 408px;
+}
+
+.wh-btnArrow {
+    width: 24px;
+    height: 24px;
+}
+
+.btnGetStart {
+    width: 172px;
+    height: 60px;
+    padding: 16px 20px 16px 20px;
+    border-radius: 12px;
+    background: #5E72E4;
+    border: 1px solid transparent;
+    gap: 12px;
+    box-shadow: 0px 1px 2px 0px #1018280D;
+}
+
+.my-media-sliderContent {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+@media (max-width: 991.9px) {
+    .max-w-sliderText {
+        max-width: 100%;
+    }
+
+    .max-w-sliderSubTxt {
+        max-width: 100%;
+    }
+
+    .py-Broker {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+}
+
+@media (max-width:1024px) {
+    .mediaSliderMainTxt {
+        font-size: 46px;
+    }
+}
+
+@media (max-width:575.9px) {
+    .mediaSliderMainTxt {
+        font-size: 32px;
+        line-height: 40px;
+    }
+
+    .my-media-sliderContent {
+        margin-bottom: 24px;
+    }
+
+    .btnGetStart {
+        height: 56px;
+    }
+
+    .mediaSubTxt {
+        font-size: 16px;
+        line-height: 26px;
+    }
+
+    .py-Broker {
+        padding-top: 90px;
+        padding-bottom: 90px;
+    }
+
+    .slick-dotted.slick-slider {
+        margin-bottom: 20px !important;
+    }
 }
