--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@
     line-height: 35px;
 }
 
+.text-xmd {
+    font-size: 18px;
+    line-height: 22px;
+}
+
 .text-base {
     font-size: 16px;
     line-height: 28px;
@@ -58,8 +63,9 @@
 
 .acc_add_img,
 .acc_sub_img {
-    width: 20px;
+    max-width: 20px;
     height: 20px;
+    width: 100%;
 }
 
 .acc_sub_img {
@@ -88,10 +94,23 @@
     opacity: 1;
 }
 
+.moreQuestion {
+    border: 1px solid #5E72E480;
+    border-radius: 12px;
+}
+
+.right-side-arrow {
+    width: 24px;
+    height: 24px;
+}
+
+.cursor-poniter {
+    cursor: pointer;
+}
 
 @media (min-width:992px) {
     .mt_lg_40 {
-        margin-top: 40px;
+        margin-top: 40px !important;
     }
 }
 
