--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,6 +305,10 @@
     margin-bottom: 8px;
 }
 
+.footerLink:hover {
+    opacity: 100% !important;
+}
+
 @media (max-width: 991.9px) {
     .max-w-sliderText {
         max-width: 100%;
